# GPU_programming

./: .gitignore  README.md  device_info2.cu  hello.cu  main  thread_space.cu
lab2/: device_info.cu
lab3/common/: book.h
lab3/src/: add_loop_cpu  add_loop_cpu.cu  add_loop_gpu  add_loop_gpu.cu
lab4/: max_finding.cu
lab5_cublas_intro/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conjugate_gradient.cu  gemm.cu  gemm_cgm  gemm_cgm.cpp  indexing
lab6_cudnn/: activation.cu  r0  report1.nsys-rep  report1.sqlite
lab9/: my_report.nsys-rep  r0  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite  vector_add.cu
lab_convolution/: cuDNN_filters.cpp  run.sh
lab_cublas_inro/: indexing.cu
mnistCUDNN/: Makefile  NSYS_Performance_Analysis_Report.md  README.md  README_improved.md  data  data_improved  data_simple  mnistCUDNN  mnistCUDNN.cpp  mnistCUDNN_improved  mnistCUDNN_improved.cpp  mnistCUDNN_simple  mnistCUDNN_simple.cpp  mnistCUDNN_simple_basic  mnistCUDNN_simple_improved  mnistCUDNN_simple_improved.cpp  mnist_batch_profile.nsys-rep  mnist_detailed_profile.nsys-rep  mnist_profile.nsys-rep  mnist_profile.sqlite  simple_model_profile.sqlite  test_image
mnistCUDNN/docs/: Model_Comparison_Report.md
mnistCUDNN/mnist_trainer/: improved_mnist_model.pth  requirements.txt  train_and_export.sh
mnistCUDNN/profiles/: improved_model_profile.nsys-rep  improved_model_profile.sqlite  mnist_batch_profile.sqlite  mnist_batch_profile_cuda_gpu_trace.csv  mnist_detailed_profile.sqlite  mnist_detailed_profile_cuda_api_trace.csv  (+2 more)
(+15 files in other folders)
